<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/delBev"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_bar_name"
        app:logo="@drawable/shop_logo"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:contentInsetStart="15dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <!--            Customer Name-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textCusName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:hint="@string/name_hint"
                    android:textColorHint="@color/appColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/appColor" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--        Email-id -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textEmailID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:hint="@string/email_hint"
                    android:textColorHint="@color/appColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/appColor" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--            Customer Phone Number-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:hint="@string/number_hint"
                    android:textColorHint="@color/appColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/appColor" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--        Types of Beverage-->
                <TextView
                    android:id="@+id/textBeverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/beverageType"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/rgBeverageType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdCoffee"
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:checked="true"
                        android:text="@string/coffee"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rdTea"
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/tea"
                        android:textSize="15sp" />

                </RadioGroup>

                <!--            Additional-->
                <TextView
                    android:id="@+id/textAdditional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/additional"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chkMilk"
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/milk"
                        android:textSize="15sp" />

                    <CheckBox
                        android:id="@+id/chkSugar"
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/sugar"
                        android:textSize="15sp" />

                </LinearLayout>

                <!--            Size of Beverages-->
                <TextView
                    android:id="@+id/textSizeBev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/bevSize"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/rgBeverageSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdSmall"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/small"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rdMedium"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/medium"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rdLarge"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/large"
                        android:textSize="15sp" />

                </RadioGroup>

                <!--           Added Flavouring -->
                <TextView
                    android:id="@+id/textAddFlavour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/add_flavouring"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/flaSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/spn_text_border"
                    android:textSize="15sp" />

                <!--           Region Selection -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtRegionSelection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:hint="@string/region_hint"
                    android:orientation="horizontal">

                    <AutoCompleteTextView
                        android:id="@+id/acRegion"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--                Store Selection-->
                <TextView
                    android:id="@+id/textStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/select_store"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/storeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/spn_text_border"
                    android:textSize="15sp" />


                <!--            Sales Date-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textSalesDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:hint="@string/sales_date"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--                Button-->
                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/print_bill"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>